Fix(style) Adds text overflow ellipsis on link widgets

--- a/src/styles/components/widgets/__uniWidget.sass
+++ b/src/styles/components/widgets/__uniWidget.sass
@@ -151,9 +151,13 @@ uni-widget-canvas
         color: #fff
 
 .uni-shortcut-link
+    display: inline-block
     cursor: pointer
     position: relative
     top: calc(50% - 2rem)
+    width: 100%
+    overflow: hidden
+    text-overflow: ellipsis
 
     color: #fff
     text-decoration: none
